# mx-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
infra/: README.md  cdk.json  package.json  tsconfig.json
src/: __init__.py
src/app/: main.py
src/app/core/: config.py  vectorstore.py
src/app/llm/: summary_chain.py
src/app/routers/: chat.py  ingest.py  summary.py
src/app/schemas/: chat.py  summary.py
src/app/services/: chat_service.py
src/app/utils/: history_utils.py
src/ingestion/: ingest.py
src/test/: conftest.py
src/test/test_core/: test_config.py
src/test/test_routes/: test_chat.py  test_health.py  test_ingest.py  test_summary.py
src/test/test_services/: test_chat_service.py  test_vectorstore.py
src/test/test_utils/: test_history_utils.py
src/tests/: test_chat.py
