[project]
name = "mx-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "SaroM0",email = "rodriguezmorasantiago@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "pymupdf>=1.26.3,<2.0.0",
    "openai>=1.97.1,<2.0.0",
    "langchain>=0.3.27,<0.4.0",
    "chromadb>=0.4.22,<0.5.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "tiktoken>=0.5.0,<0.6.0",
    "numpy>=1.24.0,<2.0.0"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"
pytest-asyncio = ">=0.23.0,<0.24.0"
pytest-cov = ">=4.1.0,<5.0.0"
httpx = ">=0.27.0,<0.28.0"  # For FastAPI TestClient

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "src/test",
]
asyncio_mode = "auto"
